--- a/index.html
+++ b/index.html
@@ -1,54 +1,7 @@
 <html>
 <head>
 <title>Latihan Navbar</title>
-<style>
-	.navbar{
-	
-	position:flex;
-	top:0;
-	width:100%;
-	height:60px;
-	background:#222;
-	color:white;
-	display:flex;
-	align-items:center;
-	padding:0 25px
-	box-sizing:border-box;
-	z-index:1000;
-	justify-content:center;
-	}
-	
-	.nav-links{
-	list-style:none;
-	display:flex;
-	gap:25px;
-	margin-right:auto;
-	}
-
-	.nav-links li a{
-	color:#ddd;
-	text-decoration:none;
-	font-size:16px;
-	transition:0.3s;
-	
-	}
-	
-	#content{
-	padding:80px 20px;
-	
-	
-	}
-	.logo{
-	margin-right:auto;
-	color:white;
-	font-size:20px;
-	font-weight:bold;
-	text-shadow:0 0 7px #fff, 0 0 10px #fff,0 0 21px #ff00de;
-	
-	}
-</style>
-
-
+		<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<nav class="navbar">
@@ -58,7 +11,7 @@
 	</div>
 		<ul class="nav-links">
 			<li><a href="#">Beranda</a></li>
-			<li><a href="file:///C:/Users/Naufal%20Arrasyid/OneDrive/Dokumen/html/challange/profil.html">Profil</a></li>
+			<li><a href="file:///C:/Users/Naufal%20Arrasyid/OneDrive/Dokumen/html/challange/profil.htm">Profil</a></li>
 			<li><a href="#">Kontak</a></li>
 		
 		</ul>
