guest page and assets

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
 <body>
 	<nav class="navbar">
 	<div class="logo"><a href="#">
-	MIRACLE
+	L
 	</a>
 	</div>
 		<ul class="nav-links">
-			<li><a href="#">Beranda</a></li>
-			<li><a href="file:///C:/Users/Naufal%20Arrasyid/OneDrive/Dokumen/html/challange/profil.htm">Profil</a></li>
-			<li><a href="#">Kontak</a></li>
+			<li><a class="link-hero" href="#">Beranda</a></li>
+			<li><a class="link-hero" href="file:///C:/Users/Naufal%20Arrasyid/OneDrive/Dokumen/html/challange/profil.html">Profil</a></li>
+			<li><a class="link-hero" href="#">Kontak</a></li>
+			<li><a class="link-hero" href="file:///C:/Users/Naufal%20Arrasyid/OneDrive/Dokumen/html/challange/guest.html">Buku Tamu</a></li>
 		
 		</ul>
 	</nav>
 
 		
-		<setion id="content">
+		<section id="content">
 			<h1>Selamat Datang!</h1>
 			<p>
 			Selamat menikmati web saya...
 			</p>
+			<a class="link-hero" href="#">Lihat Portofolio</a>
+</body>
+</html>
