--- a/profil.html
+++ b/profil.html
@@ -65,7 +65,7 @@ display: block;
 
 <div class="profile-container">
 <center>
-<img src="image1.jpg">
+<img src="assets/img/img4.jpg">
 </center>
 	<h4><center>ProfilQ</center></h4>
 	
